Update and rename config_sample.env to config.env

--- a/config.env
+++ b/config.env
@@ -1,11 +1,8 @@
-# Remove this line before deploying
-_____REMOVE_THIS_LINE_____=True
-
 # REQUIRED CONFIG
-OWNER_ID = ""
-TELEGRAM_API = ""
-TELEGRAM_HASH = ""
-BOT_TOKEN = ""
+OWNER_ID = "1633416742"
+TELEGRAM_API = "24870737"
+TELEGRAM_HASH = "68fe0175c322d964686e7a08c93c747d"
+BOT_TOKEN = "7079963474:AAGgsoYO1rBeup0wScHu-TcJTJgltRNP6XA"
 
 # Update
 UPSTREAM_REPO = ""
@@ -13,11 +10,11 @@ UPSTREAM_BRANCH = ""
 
 # OPTIONAL CONFIG
 USER_SESSION_STRING = ""
-DATABASE_URL = ""
+DATABASE_URL = "mongodb+srv://hehup:hehup18@cluster0.xuorm36.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0"
 DOWNLOAD_DIR = "/usr/src/app/downloads/"
-CMD_SUFFIX = "z"  
+CMD_SUFFIX = ""  
 AUTHORIZED_CHATS = ""   
-SUDO_USERS = ""  
+SUDO_USERS = "" 
 STATUS_LIMIT = "5"
 DEFAULT_UPLOAD = "gd"
 STATUS_UPDATE_INTERVAL = "10"
